// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots SunClockCircle with long daylight hours 1`] = `
<svg
  height="500px"
  width="500px"
>
  <defs>
    <marker
      id="triangle"
      markerHeight="6"
      markerWidth="6"
      orient="auto"
      refX="1"
      refY="5"
      viewBox="0 0 10 10"
    >
      <path
        d="M 0 0 L 10 5 L 0 10 z"
      />
    </marker>
  </defs>
  <g
    className="jsx-171440203"
  >
    <path
      className="jsx-171440203"
      d="M 391.59499061778666 380.1272729010293 A 192.3076923076923 192.3076923076923 0 1 0 106.51811589035631 378.0437325801495"
    />
  </g>
  <g
    className="jsx-4004874186"
  >
    <path
      className="jsx-4004874186"
      d="M 112.23986802216328 384.1804552017881 A 192.3076923076923 192.3076923076923 0 0 0 385.78415163813486 386.17970731581875"
    />
  </g>
  <line
    marker-end="url(#triangle)"
    stroke="black"
    strokeWidth={2}
    x1={250}
    x2={326.87227001619885}
    y1={250}
    y2={119.5184815319495}
  />
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={250.00000000000003}
      x2={250.00000000000003}
      y1={418.2692307692307}
      y2={410.2564102564102}
    />
    <text
      alignmentBaseline="central"
      textAnchor="middle"
      x={250.00000000000003}
      y={400.64102564102564}
    >
      12 am
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={165.8653846153846}
      x2={169.87179487179486}
      y1={395.72542852141993}
      y2={388.7861224013523}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={104.27457147858007}
      x2={111.21387759864771}
      y1={334.1346153846155}
      y2={330.1282051282052}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={81.73076923076925}
      x2={89.74358974358978}
      y1={250.00000000000003}
      y2={250.00000000000003}
    />
    <text
      alignmentBaseline="central"
      textAnchor="middle"
      x={110.57692307692312}
      y={250.00000000000003}
    >
      6 am
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={104.27457147858007}
      x2={111.21387759864768}
      y1={165.8653846153846}
      y2={169.87179487179486}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={165.86538461538456}
      x2={169.8717948717948}
      y1={104.2745714785801}
      y2={111.21387759864774}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={250}
      x2={250}
      y1={81.73076923076925}
      y2={89.74358974358978}
    />
    <text
      alignmentBaseline="central"
      textAnchor="middle"
      x={250}
      y={99.3589743589744}
    >
      12 pm
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={334.13461538461536}
      x2={330.1282051282051}
      y1={104.27457147858004}
      y2={111.21387759864768}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={395.72542852141993}
      x2={388.7861224013523}
      y1={165.8653846153846}
      y2={169.87179487179486}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={418.2692307692307}
      x2={410.2564102564102}
      y1={250}
      y2={250}
    />
    <text
      alignmentBaseline="central"
      textAnchor="middle"
      x={389.4230769230769}
      y={250}
    >
      6 pm
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={395.72542852142}
      x2={388.7861224013523}
      y1={334.13461538461536}
      y2={330.1282051282051}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={334.13461538461536}
      x2={330.1282051282051}
      y1={395.72542852142}
      y2={388.7861224013523}
    />
  </g>
</svg>
`;

exports[`Storyshots SunClockCircle with long nighttime hours 1`] = `
<svg
  height="500px"
  width="500px"
>
  <defs>
    <marker
      id="triangle"
      markerHeight="6"
      markerWidth="6"
      orient="auto"
      refX="1"
      refY="5"
      viewBox="0 0 10 10"
    >
      <path
        d="M 0 0 L 10 5 L 0 10 z"
      />
    </marker>
  </defs>
  <g
    className="jsx-171440203"
  >
    <path
      className="jsx-171440203"
      d="M 435.827161834496 200.49732890796622 A 192.3076923076923 192.3076923076923 0 0 0 137.65564523709003 93.91991006660882"
    />
  </g>
  <g
    className="jsx-4004874186"
  >
    <path
      className="jsx-4004874186"
      d="M 130.95445426653242 98.9688556564212 A 192.3076923076923 192.3076923076923 0 1 0 437.80957173833957 208.65011143701187"
    />
  </g>
  <line
    marker-end="url(#triangle)"
    stroke="black"
    strokeWidth={2}
    x1={250}
    x2={141.975987052459}
    y1={250}
    y2={356.1394610212483}
  />
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={250.00000000000003}
      x2={250.00000000000003}
      y1={418.2692307692307}
      y2={410.2564102564102}
    />
    <text
      alignmentBaseline="central"
      textAnchor="middle"
      x={250.00000000000003}
      y={400.64102564102564}
    >
      12 am
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={165.8653846153846}
      x2={169.87179487179486}
      y1={395.72542852141993}
      y2={388.7861224013523}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={104.27457147858007}
      x2={111.21387759864771}
      y1={334.1346153846155}
      y2={330.1282051282052}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={81.73076923076925}
      x2={89.74358974358978}
      y1={250.00000000000003}
      y2={250.00000000000003}
    />
    <text
      alignmentBaseline="central"
      textAnchor="middle"
      x={110.57692307692312}
      y={250.00000000000003}
    >
      6 am
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={104.27457147858007}
      x2={111.21387759864768}
      y1={165.8653846153846}
      y2={169.87179487179486}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={165.86538461538456}
      x2={169.8717948717948}
      y1={104.2745714785801}
      y2={111.21387759864774}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={250}
      x2={250}
      y1={81.73076923076925}
      y2={89.74358974358978}
    />
    <text
      alignmentBaseline="central"
      textAnchor="middle"
      x={250}
      y={99.3589743589744}
    >
      12 pm
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={334.13461538461536}
      x2={330.1282051282051}
      y1={104.27457147858004}
      y2={111.21387759864768}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={395.72542852141993}
      x2={388.7861224013523}
      y1={165.8653846153846}
      y2={169.87179487179486}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={418.2692307692307}
      x2={410.2564102564102}
      y1={250}
      y2={250}
    />
    <text
      alignmentBaseline="central"
      textAnchor="middle"
      x={389.4230769230769}
      y={250}
    >
      6 pm
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={395.72542852142}
      x2={388.7861224013523}
      y1={334.13461538461536}
      y2={330.1282051282051}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={334.13461538461536}
      x2={330.1282051282051}
      y1={395.72542852142}
      y2={388.7861224013523}
    />
  </g>
</svg>
`;
